[gd_scene load_steps=3 format=3 uid="uid://cehav2a7hgva6"]

[ext_resource type="Texture2D" uid="uid://dkl7quhpa741j" path="res://assets/icon/arrow-down.png" id="1_f3pfs"]
[ext_resource type="Script" path="res://util/DropdownMenu.gd" id="1_lyjtp"]

[node name="DropdownMenu" type="HBoxContainer"]
offset_left = 62.0
offset_top = 30.0
offset_right = 193.0
offset_bottom = 56.0
size_flags_horizontal = 3
script = ExtResource("1_lyjtp")
unselected_text = null
populate_on_ready = null

[node name="DropdownLabel" type="Button" parent="."]
offset_right = 107.0
offset_bottom = 26.0
size_flags_horizontal = 3
flat = true
text_overrun_behavior = 3

[node name="DropdownButton" type="TextureButton" parent="."]
offset_left = 111.0
offset_top = 6.0
offset_right = 131.0
offset_bottom = 26.0
size_flags_vertical = 8
texture_normal = ExtResource("1_f3pfs")
